--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="mobile_header">
     <a class="top-logo" href="http://127.0.0.1:8000" title="">
         <!-- logo test -->
-        <img src="http://127.0.0.1:8000/../images/logo-phongtro.png" alt="">
+        <img src="./images/logo-phongtro.png" alt="">
         <!-- logo testt -->
     </a>
     <div id="mobile_header_bars" class="mobile_header_bars">
@@ -134,7 +134,7 @@
 </nav>        <div>
         <section class="hero">
     <div class="hero-image">
-        <img src="../../images/hero.jpg" alt="">
+        <img src="./images/hero.jpg" alt="">
         <div class="hero-slogan ">
             <h1 class="hero-text">
                 <span>
