--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         <div class="header-default container container-header">
             <div class="header-area">
                 <div class="user-welcome js-reload-html-header">
-                                            <a rel="nofollow" class="btn btn-blue" href="http://127.0.0.1:8000/dang-nhap.html"><i style="margin-right:10px" class="fa-solid fa-right-to-bracket"></i>Đăng nhập</a>
-                        <a rel="nofollow" class="btn btn-blue" href="http://127.0.0.1:8000/dang-ky.html"><i style="margin-right:10px" class="fa-solid fa-user-plus"></i>Đăng ký</a>
+                                            <a rel="nofollow" class="btn btn-blue" href="login.html"><i style="margin-right:10px" class="fa-solid fa-right-to-bracket"></i>Đăng nhập</a>
+                        <a rel="nofollow" class="btn btn-blue" href="singup.html"><i style="margin-right:10px" class="fa-solid fa-user-plus"></i>Đăng ký</a>
                                     </div>
 
             </div>
@@ -718,23 +718,23 @@
                 <li><a class="mn_link" href="http://127.0.0.1:8000">Trang chủ</a></li>
                  
                                             <li class="navbar_item ">
-                            <a href="http://127.0.0.1:8000/chuyen-muc-cho-thue-phong-tro-21"
+                            <a href="cho_thue_phong_tro.html"
                                 title="Cho thuê phòng trọ">Cho thuê phòng trọ </a>
                         </li>
                                             <li class="navbar_item ">
-                            <a href="http://127.0.0.1:8000/chuyen-muc-nha-cho-thue-22"
+                            <a href="nha_cho_thue.html"
                                 title="Nhà cho thuê">Nhà cho thuê </a>
                         </li>
                                             <li class="navbar_item ">
-                            <a href="http://127.0.0.1:8000/chuyen-muc-cho-thue-mat-bang-23"
+                            <a href="cho_thue_mat_bang.html"
                                 title="Cho thuê mặt bằng">Cho thuê mặt bằng </a>
                         </li>
                                             <li class="navbar_item ">
-                            <a href="http://127.0.0.1:8000/chuyen-muc-o-ghep-24"
+                            <a href="o_ghep.html"
                                 title="Ở ghép">Ở ghép </a>
                         </li>
-                                        <li><a class="mn_link" href="http://127.0.0.1:8000/bai-viet">Bài viết</a></li>
-                    <li><a class="mn_link" href="http://127.0.0.1:8000/bang-gia">Bảng giá</a></li>
+                                        <li><a class="mn_link" href="blog.html">Bài viết</a></li>
+                    <li><a class="mn_link" href="bang_gia.html">Bảng giá</a></li>
                                 
 
             </ul>
