--- a/index.html
+++ b/index.html
@@ -85,28 +85,28 @@
         </a>
         <ul id="menu-main-menu" class="container-menu level-1">
             <li class="navbar_item active"><a
-                    href="http://127.0.0.1:8000">Trang chủ</a>
+                    href="index.html">Trang chủ</a>
             </li>
                         <li class="navbar_item ">
-                <a href="http://127.0.0.1:8000/chuyen-muc-cho-thue-phong-tro-21"
+                <a href="cho_thue_phong_tro.html"
                     title="Cho thuê phòng trọ">Cho thuê phòng trọ </a>
             </li>
                         <li class="navbar_item ">
-                <a href="http://127.0.0.1:8000/chuyen-muc-nha-cho-thue-22"
+                <a href="nha_cho_thue.html"
                     title="Nhà cho thuê">Nhà cho thuê </a>
             </li>
                         <li class="navbar_item ">
-                <a href="http://127.0.0.1:8000/chuyen-muc-cho-thue-mat-bang-23"
+                <a href="cho_thue_mat_bang.html"
                     title="Cho thuê mặt bằng">Cho thuê mặt bằng </a>
             </li>
                         <li class="navbar_item ">
-                <a href="http://127.0.0.1:8000/chuyen-muc-o-ghep-24"
+                <a href="o_ghep.html"
                     title="Ở ghép">Ở ghép </a>
             </li>
             
 
             <li class="navbar_item ">
-                <a href="http://127.0.0.1:8000/bai-viet" title="Bài viết">Bài viết</a>
+                <a href="blog.html" title="Bài viết">Bài viết</a>
             </li>
 
 
@@ -116,7 +116,7 @@
             </li> -->
 
             <li class="navbar_item "><a
-                href="http://127.0.0.1:8000/bang-gia">Bảng giá</a>
+                href="bang_gia.html">Bảng giá</a>
             </li>
         </ul>
 
