--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 </div> -->
 <div class="mobile_header">
-    <a class="top-logo" href="http://127.0.0.1:8000" title="">
+    <a class="top-logo" href="" title="">
         <!-- logo test -->
         <img src="./images/logo-phongtro.png" alt="">
         <!-- logo testt -->
@@ -80,7 +80,7 @@
     <div class="navbar-menu-container">
         <a class="top-logo" href="http://127.0.0.1:8000" title="">
             <!-- logo test -->
-            <img src="http://127.0.0.1:8000/../images/logo-phongtro.png" alt="">
+            <img src="./images/logo-phongtro.png" alt="">
             <!-- logo testt -->
         </a>
         <ul id="menu-main-menu" class="container-menu level-1">
