--- a/o_ghep.html
+++ b/o_ghep.html
@@ -65,7 +65,7 @@
 <div class="mobile_header">
     <a class="top-logo" href="http://127.0.0.1:8000" title="">
         <!-- logo test -->
-        <img src="http://127.0.0.1:8000/../images/logo-phongtro.png" alt="">
+        <img src="./images/logo-phongtro.png" alt="">
         <!-- logo testt -->
     </a>
     <div id="mobile_header_bars" class="mobile_header_bars">
