--- a/admin_index.html
+++ b/admin_index.html
@@ -118,38 +118,38 @@
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
                             <a class="nav-link text-white" aria-current="page"
-                                href="http://127.0.0.1:8000/admin">Trang
+                                href="">Trang
                                 chủ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="http://127.0.0.1:8000/admin/location">Địa chỉ</a>
+                            <a class="nav-link text-white" href="">Địa chỉ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="http://127.0.0.1:8000/admin/category"
+                            <a class="nav-link text-white" href=""
                                 title="Category">Danh
                                 mục</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="http://127.0.0.1:8000/admin/user"
+                            <a class="nav-link text-white" href=""
                                 title="Category">Khách
                                 hàng</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="http://127.0.0.1:8000/admin/room"
+                            <a class="nav-link text-white" href=""
                                 title="Category">Tin đăng</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="http://127.0.0.1:8000/admin/article" title="Article">Bài
+                            <a class="nav-link text-white" href="" title="Article">Bài
                                 viết</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="http://127.0.0.1:8000/admin/recharge"
+                            <a class="nav-link text-white" href=""
                                 title="Category">Nạp
                                 tiền</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="http://127.0.0.1:8000/admin/recharge/pay"
+                            <a class="nav-link text-white" href=""
                                 title="Category">Thanh toán</a>
                         </li>
 
@@ -163,7 +163,7 @@
                                     width="40" height="40" class="rounded-circle">
                             </a>
                             <div class="dropdown-menu" aria-labelledby="menuAccount">
-                                <a class="dropdown-item" href="http://127.0.0.1:8000/admin/logout" title="Logout">Đăng
+                                <a class="dropdown-item" href="" title="Logout">Đăng
                                     xuất</a>
                             </div>
                         </li>
@@ -197,7 +197,7 @@
                 Tổng số thành viên 3
             </div>
             <div class="card-footer d-flex align-items-center justify-content-between">
-                <a class="small text-white stretched-link" href="http://127.0.0.1:8000/admin/user">Danh sách</a>
+                <a class="small text-white stretched-link" href="">Danh sách</a>
                 <div class="small text-white"><svg class="svg-inline--fa fa-angle-right" aria-hidden="true"
                         focusable="false" data-prefix="fas" data-icon="angle-right" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512" data-fa-i2svg="">
@@ -213,7 +213,7 @@
         <div class="card bg-warning text-white mb-4">
             <div class="card-body">Tổng tin đăng 7</div>
             <div class="card-footer d-flex align-items-center justify-content-between">
-                <a class="small text-white stretched-link" href="http://127.0.0.1:8000/admin/room">Danh sách</a>
+                <a class="small text-white stretched-link" href="">Danh sách</a>
                 <div class="small text-white"><svg class="svg-inline--fa fa-angle-right" aria-hidden="true"
                         focusable="false" data-prefix="fas" data-icon="angle-right" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512" data-fa-i2svg="">
@@ -229,7 +229,7 @@
         <div class="card bg-success text-white mb-4">
             <div class="card-body">Giao dịch thanh toán 7</div>
             <div class="card-footer d-flex align-items-center justify-content-between">
-                <a class="small text-white stretched-link" href="http://127.0.0.1:8000/admin/recharge/pay">Danh
+                <a class="small text-white stretched-link" href="">Danh
                     sách</a>
                 <div class="small text-white"><svg class="svg-inline--fa fa-angle-right" aria-hidden="true"
                         focusable="false" data-prefix="fas" data-icon="angle-right" role="img"
@@ -246,7 +246,7 @@
         <div class="card bg-danger text-white mb-4">
             <div class="card-body">Lịch sử nạp tiền 2</div>
             <div class="card-footer d-flex align-items-center justify-content-between">
-                <a class="small text-white stretched-link" href="http://127.0.0.1:8000/admin/recharge">Danh sách</a>
+                <a class="small text-white stretched-link" href="">Danh sách</a>
                 <div class="small text-white"><svg class="svg-inline--fa fa-angle-right" aria-hidden="true"
                         focusable="false" data-prefix="fas" data-icon="angle-right" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512" data-fa-i2svg="">
@@ -276,7 +276,7 @@
                                 <tr>
                     <td scope="row">19</td>
                     <td scope="row">
-                        <img src="/images/news-1.jpg"
+                        <img src="./images/news-1.jpg"
                             style="width: 60px;height: 60px;border-radius: 50%" alt="">
                     </td>
                     <td scope="row">Trung <br>nmtrung761@gmail.com</td>
@@ -287,7 +287,7 @@
                                 <tr>
                     <td scope="row">18</td>
                     <td scope="row">
-                        <img src="/uploads/2024/02/25/2024-02-25__z4241880085877-eff804ef3a7d57939eb72a234fc858a0.jpg"
+                        <img src="./uploads/2024/02/25/2024-02-25__z4241880085877-eff804ef3a7d57939eb72a234fc858a0.jpg"
                             style="width: 60px;height: 60px;border-radius: 50%" alt="">
                     </td>
                     <td scope="row">Vũ Tuấn Anh <br>vutuananh01@gmail.com</td>
@@ -298,7 +298,7 @@
                                 <tr>
                     <td scope="row">17</td>
                     <td scope="row">
-                        <img src="/images/news-1.jpg"
+                        <img src="./images/news-1.jpg"
                             style="width: 60px;height: 60px;border-radius: 50%" alt="">
                     </td>
                     <td scope="row">Vũ Tuấn Anh <br>vutuananh0949@gmail.com</td>
